--- a/styles.scss
+++ b/styles.scss
@@ -39,7 +39,7 @@ $bg-image: theme; /* <-- leave default theme BG image */
 
 //$bg-image: url(assets/imgs/BGs/bgtile-4.png);
 
-//$bg-image: url(assets/imgs/BGs/bgtile-5.png);
+$bg-image: url(assets/imgs/BGs/bgtile-5.png);
 
 /*There are 30 sample background tiles to choose from in assets > imgs > BGs*/
 
@@ -48,7 +48,7 @@ $bg-image: theme; /* <-- leave default theme BG image */
 
 body {
     
-    background-color: $bg-color;
+    background-color: #eee;
     
     background-image: $bg-image;
 }
