--- a/exocore/_sass/_sprite.scss
+++ b/exocore/_sass/_sprite.scss
@@ -60,7 +60,7 @@ article {
 
 body {
   background-color: black;
-  background-image: url("/assets/imgs/BGs/BGtile-16.png");
+  background-image: url("/assets/imgs/BGs/bg-space.gif");
   background-repeat: repeat;
     background-attachment: fixed;
   box-sizing: content-box;
