--- a/styles.scss
+++ b/styles.scss
@@ -39,7 +39,9 @@ $bg-image: theme; /* <-- leave default theme BG image */
 
 //$bg-image: url(assets/imgs/BGs/bgtile-4.png);
 
-$bg-image: url(assets/imgs/BGs/bg-space.gif);
+//$bg-image: url(assets/imgs/BGs/bg-space.gif);
+
+$bg-image: url(assets/imgs/BGs/bg-wonder.gif);
 
 /*There are 30 sample background tiles to choose from in assets > imgs > BGs*/
 
